Fix border issue on mobile

--- a/src/ReplayDetails.css
+++ b/src/ReplayDetails.css
@@ -74,9 +74,9 @@
 
 @media(max-width: 700px) {
   .ReplayDetails {
-    margin: -8px;
+    margin: -6px;
     margin-top: 8px;
-    margin-bottom: -4px;
+    margin-bottom: -2px;
     padding: 15px;
     padding-top: 10px;
   }
